# draftsmith_flask

./: .gitignore  README.md  README_1.md  justfile  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
draftsmith_flask/: api.py  config.py  main.py  server.py
draftsmith_flask/render/: postprocess.py  regex_patterns.py
draftsmith_flask/static/: styles.css  touch-drag.js
draftsmith_flask/static/css/: dnd.css  markdown.css  tailwind.css
draftsmith_flask/static/js/: theme-handler.js
draftsmith_flask/templates/: base.html  dummy.html  error.html  head.html  katex_js.html  manage_tags.html  move_note.html  navbar.html  note_create.html  note_detail.html  note_edit.html  right_navbar_button.html  search_results.html  tag_sidebar.html  theme_controller.html
src/: api.py  app.py  main.py  server.py
src/api/: notes.py
src/api/assets/: list.py  (+1 more)
src/render/: math_store.py  postprocess.py  regex_patterns.py  render_markdown.py  test_video_tag_replacement.py
src/templates/: asset_list.html  base.html  body.html  breadcrumbs.html  dummy.html  edit_button.html  error.html  footer.html  head.html  katex_js.html  manage_all_tags.html  manage_tags.html  markdown-content.html  move_note.html  navbar.html  note_create.html  note_detail.html  note_edit.html  note_search.html  parent_id_form.html  recent_pages.html  right_navbar_button.html  search_bar.html  search_result_block.html  search_results.html  sidebar.html  tag_sidebar.html  tagged_pages_list.html  theme_controller.html  theme_dropdown.html  theme_menu.html  upload_asset.html
(+43 files in other folders)
