[tool.poetry]
name = "draftsmith-flask"
version = "0.1.0"
description = ""
authors = ["ryan <exogenesis@protonmail.com>"]
license = "GPL"
readme = "README.md"
packages = [{include = "*", from="src"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
Flask = "^3.0.3"
typer = "^0.12.5"
gunicorn = "^23.0.0"
requests-toolbelt = "^1.0.0"
flask-wtf = "^1.2.2"

[tool.poetry.group.dev.dependencies]
vulture = "^2.13"
pytest = "^8.3.3"
ruff = "^0.7.0"
pyright = "^1.1.385"
pytype = "^2024.10.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
draftsmith-flask = "main:app"
server = "server:app.run"
